HTML Group Abstract (and some little fixes) #6

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ testGenericity.cs
 
 #fichiers tests (en-dehors des fichiers de référence)
 ChildrenManagementTest/data/files/*.json
+
+#fichiers d'Extraction
+*.html
